--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,69 @@
-# Compiled class file
+# Java
 *.class
-
-# Log file
 *.log
-
-# BlueJ files
-*.ctxt
-
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
-
-# Package Files #
 *.jar
 *.war
-*.nar
 *.ear
-*.zip
-*.tar.gz
-*.rar
 
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
-replay_pid*
+# Maven
+/target/
+!.mvn/wrapper/maven-wrapper.jar
+
+# IntelliJ IDEA
+.idea/
+*.iml
+*.iws
+out/
+
+# VS Code (optional)
+.vscode/
+
+# Logs
+*.log
+logs/
+*.out
+
+# OS
+.DS_Store
+Thumbs.db
+
+# Testcontainers
+testcontainers.properties
+
+# Generated gRPC + Protobuf
+**/generated-sources/
+**/grpc-java/
+**/protobuf/
+
+# Build tools
+.gradle/
+build/
+.mvn/
+.mvnw
+.mvnw.cmd
+
+# Spring Boot devtools
+.spring-boot-devtools.properties
+
+# Docker
+*.pid
+*.seed
+docker-compose.override.yml
+
+# Environment config
+.env
+*.env
+.env.*
+
+# Security
+secrets.*
+key.*
+*.pem
+*.jks
+
+# Optional: IDE-specific settings
+*.swp
+*.swo
+
+# Optional: IntelliJ local run configs
+run/
